--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -1,10 +1,10 @@
-<ul>
-    <li><a href="./index.html">Index</a></li>
-    <li><a href="./commands.html">Commands</a>{% if page.url contains "command-" %}:{% endif %}</li>
-
+<div class="nav flex">
+    <a href="./updates.html">Updates</a>
+    <a href="./commands.html">Commands</a>
     {% if page.url contains "command-" %}
+        &rarr;
         {% for cmd in site.data.commands %}
-            <li><a href="./command-{{ cmd[0] }}.html">{{ cmd[0] }}</a></li>
+            <a href="./command-{{ cmd[0] }}.html">{{ cmd[0] }}</a>
         {% endfor %}
     {% endif %}
-</ul>
+</div>
