--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -1,10 +1,23 @@
-// body {
-//     font-size: 100%;
-//     font-family: monospace;
-// }
-
-// h1 { font-size: 120%; }
-
 body {
     padding-bottom: 50vh;
+}
+
+h1, .nav {
+    a {
+        text-decoration: none;
+    }
+}
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    align-content: start;
+    align-items: stretch;
+    justify-content: start;
+
+    // &.wide {
+    //     gap: 1.5rem 2.5rem;
+    // }
 }
